# discord-scraper

./: .env.sample  .gitignore  README.md  pyproject.toml
src/: discord_message_summarizer.py
